--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 ---
-name: Go Build and Test
+name: Tests
 
 on:
   push:
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   build:
-    name: Build and Test
+    name: Tests
     runs-on: ubuntu-latest
 
     strategy:
@@ -34,8 +34,5 @@ jobs:
         with:
           go-version: 1.17
 
-      - name: Build
-        run: go build -v ./...
-
-      - name: Test
+      - name: Run Tests
         run: go test -v ./...
