--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -47,6 +47,11 @@ jobs:
       - name: Set up makesystem
         run: make makesystem_install
 
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
